# emcp-tools

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-please.yml
src/: cleanup_stale_data.rs  main.rs
tests/: lib.rs
