[package]
name = "emcp-tools"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Utilities for maintaining the Essen medical computing platform (EMCP)"

[dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
assert_fs = "1.1.2"
clap = { version = "4.5.37", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
parse_duration = "2.1.1"
predicates = "3.1.3"
tempfile = "3.19.1"
